* Tried fixing the dropdown issue on mobile. Fixed using css .dropdown-backdrop{position:static;}

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -90,3 +90,6 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   display: none;
 }
 
+.dropdown-backdrop {
+    position: static;
+}
